# libeq

./: .gitignore  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: run-tests.yml
src/libeq/: __init__.py  consts.py  data_structure.py  excepts.py  utils.py
src/libeq/optimizers/: __init__.py  bridge.py  cpluss.py  fitter.py  fobj.py  jacobian.py  libemf.py  libfit.py  libmath.py  opt_utils.py  potentiometry.py
src/libeq/outer_fixed_point/: wrappers.py
src/libeq/parsers/: __init__.py  bstac.py  superquad.py
src/libeq/solver/: nr.py  solver.py
tests/: fixtures.py  pytest.ini  test_amatrix.py  test_data_structure.py  test_distribution.py  test_legacy.py  test_potentiometry.py  test_solids.py  test_titration.py
tests/data/: aluminium_alkaline.json  data_hexaprotic.py  data_znedta.py  hedtac.sup  namototc.mis  znedta.json
tests/data/test_files/Glycine_test/: gly_prot_I015_wfix_Hfix.json  gly_prot_I015_wfix_Hvar.json  gly_prot_I015_wvar_Hfix.json  gly_prot_I015_wvar_Hvar.json
tests/data/test_files/Hexaprotic acid/: H6L.json
