[project]
name = "libeq"
version = "0.4.0"
description = "Library for solving equilibrium in solution problems"
authors = [{name="Lorenzo Castellino", email="castellino96@gmail.com"},
           {name="Salvador Blasco", email="salvador.blasco@uv.es"}]
readme = "README.md"
# packages = [{ include = "libeq", from = "src" }]
requires-python = ">= 3.10"
dependencies = [
 "numpy", "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"

[project.optional-dependencies]
dev = [
    "numpy>=1.2",
    "pytest>=8.4",
]

[tool.pytest]
addopts = ["-ra", "-q"]
minversion = "8.0"
testpaths = [ "tests" ]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[pytest]
pythonpath = ["../src"]
